--- a/.github/workflows/update-parent.yml
+++ b/.github/workflows/update-parent.yml
@@ -12,12 +12,6 @@ jobs:
       - name: Clone Git Repository
         uses: actions/checkout@v4
       - uses: ./.github/actions/managed-java
-      - uses: actions/cache@v3
-        with:
-          path: ~/.m2/repository
-          key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
-          restore-keys: |
-            ${{ runner.os }}-maven-
       - name: Update Parent
         run: mvn --batch-mode --define generateBackupPoms=false versions:update-parent
       - id: cpr
@@ -31,14 +25,16 @@ jobs:
           title: Update parent to latest version
           body: |
             `mvn --batch-mode --define generateBackupPoms=false versions:update-parent`
-          assignees: sebhoss
+          labels: |
+            enhancement
+          assignees: |
+            sebhoss
           draft: false
           base: main
           branch: update-parent
           delete-branch: true
-      - id: automerge
-        name: Enable Pull Request Automerge
+      - name: Enable Pull Request Automerge
         if: steps.cpr.outputs.pull-request-operation == 'created'
-        run: gh pr merge --rebase --auto "${{ steps.cpr.outputs.pull-request-number }}"
+        run: gh pr merge --rebase --auto ${{ steps.cpr.outputs.pull-request-number }}
         env:
           GH_TOKEN: ${{ secrets.PAT }}
