--- a/.github/workflows/reuse.yml
+++ b/.github/workflows/reuse.yml
@@ -3,16 +3,12 @@
 
 name: REUSE compliance
 on:
-  push:
-    branches: [ main ]
   pull_request:
     branches: [ main ]
 jobs:
   reuse:
     runs-on: ubuntu-latest
     steps:
-      - id: checkout
-        name: Checkout
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
       - name: REUSE Compliance Check
         uses: fsfe/reuse-action@v2
