--- a/.github/workflows/verify.yml
+++ b/.github/workflows/verify.yml
@@ -3,39 +3,14 @@
 
 name: Verify Commits
 on:
-  push:
-    branches: [ main ]
   pull_request:
     branches: [ main ]
-env:
-  JAVA_VERSION: 17
-  JAVA_PACKAGE: jdk
-  JAVA_ARCH: x64
-  JAVA_DISTRO: temurin
 jobs:
-  build:
-    name: Build Project
+  verify:
     runs-on: ubuntu-latest
     steps:
-      - id: checkout
-        name: Checkout
+      - name: Clone Git Repository
         uses: actions/checkout@v4
-      - id: java
-        name: Setup Java
-        uses: actions/setup-java@v4
-        with:
-          java-version: ${{ env.JAVA_VERSION }}
-          java-package: ${{ env.JAVA_PACKAGE }}
-          architecture: ${{ env.JAVA_ARCH }}
-          distribution: ${{ env.JAVA_DISTRO }}
-      - id: cache
-        name: Cache Maven Repository
-        uses: actions/cache@v3
-        with:
-          path: ~/.m2/repository
-          key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
-          restore-keys: |
-            ${{ runner.os }}-maven-
-      - id: maven
-        name: Maven Verify
+      - uses: ./.github/actions/managed-java
+      - name: Build with Maven
         run: mvn --batch-mode verify
