--- a/storage-units-orika/pom.xml
+++ b/storage-units-orika/pom.xml
@@ -42,6 +42,7 @@
         <dependency>
             <groupId>ma.glasnost.orika</groupId>
             <artifactId>orika-core</artifactId>
+            <version>1.5.4</version>
         </dependency>
     </dependencies>
 </project>
