--- a/storage-units-eclipselink/pom.xml
+++ b/storage-units-eclipselink/pom.xml
@@ -38,6 +38,7 @@
         <dependency>
             <groupId>org.eclipse.persistence</groupId>
             <artifactId>eclipselink</artifactId>
+            <version>4.0.6</version>
         </dependency>
         <dependency>
             <groupId>jakarta.activation</groupId>
