--- a/storage-units-gson/pom.xml
+++ b/storage-units-gson/pom.xml
@@ -38,6 +38,7 @@
         <dependency>
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
+            <version>2.13.1</version>
         </dependency>
         <dependency>
             <groupId>org.jspecify</groupId>
