--- a/storage-units-jakarta/pom.xml
+++ b/storage-units-jakarta/pom.xml
@@ -42,6 +42,7 @@
         <dependency>
             <groupId>jakarta.persistence</groupId>
             <artifactId>jakarta.persistence-api</artifactId>
+            <version>3.2.0</version>
         </dependency>
     </dependencies>
 </project>
