--- a/storage-units-mongodb/pom.xml
+++ b/storage-units-mongodb/pom.xml
@@ -38,6 +38,7 @@
         <dependency>
             <groupId>org.mongodb</groupId>
             <artifactId>mongodb-driver</artifactId>
+            <version>3.12.14</version>
         </dependency>
         <dependency>
             <groupId>org.jspecify</groupId>
