--- a/storage-units-simple/pom.xml
+++ b/storage-units-simple/pom.xml
@@ -42,6 +42,7 @@
         <dependency>
             <groupId>org.simpleframework</groupId>
             <artifactId>simple-xml</artifactId>
+            <version>2.7.1</version>
         </dependency>
         <dependency>
             <groupId>org.mockito</groupId>
