fix build failures
Signed-off-by: Sebastian Hoß <seb@xn--ho-hia.de>

--- a/pom.xml
+++ b/pom.xml
@@ -99,6 +99,13 @@
                 <version>7.0.0</version>
             </dependency>
             <dependency>
+                <groupId>org.junit</groupId>
+                <artifactId>junit-bom</artifactId>
+                <version>5.13.0</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+            <dependency>
                 <groupId>com.fasterxml.jackson</groupId>
                 <artifactId>jackson-bom</artifactId>
                 <version>2.16.1</version>
@@ -115,7 +122,10 @@
         </dependencies>
     </dependencyManagement>
 
-
+    <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
+    <!--                                   BUILD                                 -->
+    <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
+    <!-- https://maven.apache.org/pom.html#Build -->
     <build>
         <plugins>
             <plugin>
