--- a/storage-units-model/pom.xml
+++ b/storage-units-model/pom.xml
@@ -52,6 +52,11 @@
             <scope>provided</scope>
             <version>2.38.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
 </project>
