--- a/storage-units-modelmapper/pom.xml
+++ b/storage-units-modelmapper/pom.xml
@@ -44,5 +44,10 @@
             <artifactId>modelmapper</artifactId>
             <version>3.2.3</version>
         </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 </project>
