--- a/storage-units-orika/pom.xml
+++ b/storage-units-orika/pom.xml
@@ -44,5 +44,10 @@
             <artifactId>orika-core</artifactId>
             <version>1.5.4</version>
         </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 </project>
