--- a/.github/actions/managed-maven/action.yml
+++ b/.github/actions/managed-maven/action.yml
@@ -14,6 +14,6 @@ runs:
         architecture: x64
         distribution: temurin
         cache: maven
-        server-id: ossrh
+        server-id: central
         server-username: MAVEN_CENTRAL_USERNAME
         server-password: MAVEN_CENTRAL_TOKEN
